# libvpx

./: .clang-format  .gitattributes  .gitignore  .mailmap  AUTHORS  CHANGELOG  CMakeLists.txt  LICENSE  README  README_RS  all_builds.py  aomdec.c  aomenc.c  aomenc.h  aomstats.c  aomstats.h  args.c  args.h  configure  docs.mk  example_xma.c  examples.mk  experimental.c  experimental.h  iosbuild.sh  ivfdec.c  ivfdec.h  ivfenc.c  ivfenc.h  libs.doxy_template  libs.mk  mainpage.dox  md5_utils.c  md5_utils.h  rate_hist.c  rate_hist.h  release.sh  solution.mk  tools.mk  tools_common.c  (+31 more)
aom/: aom.h  aom_codec.h  aom_codec.mk  aom_decoder.h  aom_encoder.h  aom_frame_buffer.h  aom_image.h  aom_integer.h  aomcx.h  aomdx.h  vpx_codec.h  vpx_codec.mk  vpx_decoder.h  vpx_encoder.h  vpx_frame_buffer.h
aom_dsp/: add_noise.c  ans.c  ans.h  ansreader.h  answriter.h  aom_convolve.c  aom_convolve.h  aom_dsp.mk  aom_dsp_common.h  aom_dsp_rtcd.c  aom_dsp_rtcd_defs.pl  aom_filter.h  aom_simd.c  aom_simd.h  avg.c  bitreader.c  bitreader.h  bitreader_buffer.c  bitreader_buffer.h  bitwriter.c  bitwriter.h  bitwriter_buffer.c  bitwriter_buffer.h  blend.h  blend_a64_hmask.c  blend_a64_mask.c  blend_a64_vmask.c  buf_ans.c  buf_ans.h  daalaboolreader.c  daalaboolreader.h  daalaboolwriter.c  daalaboolwriter.h  deblock.c  divide.c  divide.h  dkboolreader.c  dkboolreader.h  dkboolwriter.c  dkboolwriter.h  (+36 more)
aom_mem/: aom_mem.c  aom_mem.h  vpx_mem.c
aom_ports/: aom_once.h  aom_ports.mk  aom_timer.h  arm.h  arm_cpudetect.c  bitops.h  config.h  emmintrin_compat.h  emms.asm  mem.h  mem_ops.h  mem_ops_aligned.h  msvc.h  system_state.h  vpx_timer.h  x86.h  x86_abi_support.asm
aom_scale/: aom_scale.h  aom_scale_rtcd.c  aom_scale_rtcd.pl  vpx_scale.h  vpx_scale.mk  vpx_scale_rtcd.c  yv12config.h
aom_util/: aom_thread.c  aom_thread.h  aom_util.mk  debug_util.c  debug_util.h  endian_inl.h  vpx_thread.c  vpx_util.mk
av1/: av1_common.mk  av1_cx.mk  av1_cx_iface.c  av1_dx.mk  av1_dx_iface.c  av1_iface_common.h  av1cx.mk  vp10_common.mk  vp10_cx_iface.c  vp10_dx_iface.c  vp10_iface_common.h
convolve/: Makefile  convolve.c  filtering.c  horiz_filter.c
examples/: aom_cx_set_ref.c  aomcx_set_ref.c  decode_packetdrop_eval.txt  decode_to_md5.c  decode_to_md5.txt  decode_with_drops.c  decode_with_partial_drops.txt  decoder_tmpl.c  decoder_tmpl.txt  encoder_tmpl.c  encoder_tmpl.txt  error_resilient.c  example_xma.c  force_keyframe.c  gen_example_code.sh  gen_example_doxy.php  gen_example_text.sh  inspect.c  lossless_encoder.c  postproc.c  postproc.txt  resize_util.c  set_maps.c  simple_decoder.c  simple_decoder.txt  simple_encoder.c  svc_context.h  svc_encodeframe.c  twopass_encoder.c  twopass_encoder.txt  vp8_multi_resolution_encoder.c  vp8_scalable_patterns.txt  vp8_set_maps.c  vp8_set_maps.txt  vp8cx_set_ref.c  vp9_lossless_encoder.c  vp9_spatial_scalable_encoder.c  vp9_spatial_svc_encoder.c  vp9cx_set_ref.c  vpx_cx_set_ref.c  (+5 more)
libmkv/: EbmlBufferWriter.c  EbmlBufferWriter.h  EbmlIDs.h  EbmlWriter.c  EbmlWriter.h  WebMElement.c  WebMElement.h  testlibmkv.c
loopfilter/: alloccommon.c  av1_loopfilter.c  av1_loopfilter.h  shift.c  thread_common.c
nestegg/: 0001-include-paths.diff
scripts/: BQTerrace_1080p60.sh  BasketballDrill_480p.sh  BasketballDrive_1080p.sh  BasketballDrive_1080p50.sh  ParkScene_1080p24.sh  aerial_4k.sh  aom_conf_build.sh  aom_nightly_config.sh  aom_nightly_speed.sh  aom_push.sh  aomenc_auto_720p.sh  aomenc_nightly_speed.sh  av1_conf_build.sh  av1_config.sh  blue_sky_1080p25.sh  cmake_build.txt  confbuild.sh  disabled_list.sh  encode_exp_bs.sh  encode_video_seq_bs.sh  gen_html_footer.sh  gen_html_header.sh  git.txt  into_tree.sh  list_exp_speed.sh  list_exp_speed_hbd.sh  manemail.sh  nightly_config.sh  nightly_run.sh  nightly_speed.sh  profile_exp_speed_hbd.sh  runconfig.sh  runconfig_hbd.sh  rush_hour_1080p25.sh  soccer_cif.sh  sync_codebase.sh  tennis_1080p24.sh  touchdown_480p.sh  video_sequence.sh  video_sequence_4k.sh  (+8 more)
test/: accounting_test.cc  acm_random.h  active_map_refresh_test.cc  active_map_test.cc  add_noise_test.cc  alt_ref_aq_segment_test.cc  altref_test.cc  ans_test.cc  aomcx_set_ref.sh  aomdec.sh  aomenc.sh  aq_segment_test.cc  arf_freq_test.cc  array_utils.h  assertion_helpers.h  av1_ans_test.cc  av1_convolve_optimz_test.cc  av1_convolve_test.cc  av1_dct_test.cc  av1_ext_tile_test.cc  av1_fht16x16_test.cc  av1_fht16x32_test.cc  av1_fht16x8_test.cc  av1_fht32x16_test.cc  av1_fht4x4_test.cc  av1_fht4x8_test.cc  av1_fht8x16_test.cc  av1_fht8x4_test.cc  av1_fht8x8_test.cc  av1_fwd_txfm1d_test.cc  av1_fwd_txfm2d_test.cc  av1_highbd_iht_test.cc  av1_iht16x8_test.cc  av1_iht8x16_test.cc  av1_inv_txfm1d_test.cc  av1_inv_txfm2d_test.cc  av1_inv_txfm_test.cc  av1_quantize_test.cc  av1_txfm_test.cc  av1_txfm_test.h  (+201 more)
tools/: README.pgo.md  all_builds.py  build_inspector.sh  cpplint.py  ftfy.sh  gen_constrained_tokenset.py  intersect-diffs.py  lint-hunks.py  tiny_ssim.c  wrap-commit-msg.py
vp10/: vp10_common.mk  vp10_cx_iface.c  vp10_dx_iface.c  vp10_iface_common.h  vp10cx.mk  vp10dx.mk  vp9_cx_iface.c  vp9_dx_iface.c
vp8/: exports_dec  exports_enc  vp8.h  vp8_common.mk  vp8_cx_iface.c  vp8_dixie_iface.c  vp8_dx_iface.c  vp8_ratectrl_rtc.cc  vp8_ratectrl_rtc.h  vp8cx.h  vp8cx.mk  vp8cx_arm.mk  vp8dx.h  vp8dx.mk  vp8dx_arm.mk  vp8e.h
vp9/: exports_enc  ratectrl_rtc.cc  ratectrl_rtc.h  simple_encode.cc  simple_encode.h  vp9_common.mk  vp9_cx_iface.c  vp9_cx_iface.h  vp9_dx_iface.c  vp9_dx_iface.h  vp9_iface_common.c  vp9_iface_common.h  vp9cx.mk  vp9cx_arm.mk  vp9dx.mk  vp9dx_arm.mk
vpx/: exports_dec  exports_enc  svc_context.h  vp8.h  vp8cx.h  vp8dx.h  vp8e.h  vpx_codec.h  vpx_codec.mk  vpx_codec_impl_top.h  vpx_decoder.h  vpx_decoder_compat.h  vpx_encoder.h  vpx_ext_ratectrl.h  vpx_external_frame_buffer.h  vpx_frame_buffer.h  vpx_image.h  vpx_integer.h  vpx_tpl.h
vpx_codec/: exports  vpx_codec.h  vpx_codec_impl_bottom.h  vpx_decoder.h  vpx_image.h
vpx_dsp/: add_noise.c  avg.c  bitreader.c  bitreader.h  bitreader_buffer.c  bitreader_buffer.h  bitwriter.c  bitwriter.h  blend.h  (+49 more)
(+2648 files in other folders)
